# feup-aed

./: .gitignore  CMakeLists.txt  README.md
TP01/: README.md
TP01_extra/: postOffice.h  postman.h
TP02/: README.md  answers.md
TP04/: README.md  product.cpp
TP05/: game.cpp  game.h  tests.cpp
TP06/: dictionary.h  game.cpp  tests.cpp
TP07/: README.md  bst.h  funWithBSTs.cpp
TP08/: funWithHashTables.cpp
TP09/: README.md  tests.cpp
TP10/: funWithGraphs.h
TP11/: tests.cpp
lib/: main.cpp
p01/: CMakeLists.txt  tests.cpp
p01/Tests/: parque.cpp  parque.h  tests.cpp
p01_extra/: CMakeLists.txt  README.md
p01_extra/Tests/: mail.cpp  mail.h  postOffice.cpp  postOffice.h  postman.cpp  postman.h  tests.cpp
p02/: CMakeLists.txt  README.md  my_vector.h  tests.cpp
p02/Tests/: fibonacci.h  my_vector.h  tests.cpp
p03/: CMakeLists.txt  README.md  funSearchProblem.cpp  main.cpp
p03/Tests/: funSearchProblem.cpp  funSearchProblem.h  tests.cpp
p03/docs/: Doxyfile
p04/: CMakeLists.txt  funSortProblem.cpp  product.h
p04/Tests/: funSortProblem.h  piece.cpp  piece.h  tests.cpp
p05/: CMakeLists.txt  README.md  stackExt.h
p05/Tests/: performance.h
p06/: CMakeLists.txt  README.md
p06/Tests/: binaryTree.h  bst.h  dictionary.cpp  game.h
p07/: CMakeLists.txt  README.md  main.cpp  tests.cpp
p07/Tests/: aed2122_p07  bst.h  funWithBSTs.h
p08/: CMakeLists.txt  README.md  hashTable.h  tests.cpp
p08/Tests/: aed2122_p08  funWithHashTables.h
p09/: CMakeLists.txt  funWithGraphs.cpp  graph.h
p09/Tests/: graph.cpp
p10/: CMakeLists.txt  README.md  funWithGraphs.cpp  graph.h  minHeap.h  tests.cpp
p10/Tests/: disjointSets.h  graph.cpp
p11/: CMakeLists.txt  README.md  funWithGraphs.cpp  graph.h  main.cpp  minHeap.h
p11/Tests/: funWithGraphs.h  graph.cpp
